[RFTOR] Header composition | layout & mobile navigation button

--- a/resources/less/components/logotype.less
+++ b/resources/less/components/logotype.less
@@ -1,20 +1,25 @@
 /* ===== L O G O ===== */
-#header-logotype-container {
-    grid-row: 1 / 2;
-    margin: 20px 0;
+.logotype-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
-#logotype {
-    grid-row: 1/2;
-    height: 50px;
-    margin:auto;
-}
-#title {
-    grid-row: 2/3;
-    margin: auto;
-    // color: @WEB_FG_COLOR;
-    font-size: 25px !important;
-    letter-spacing: 1px;
-}
-#mobile-nav-icon-container{
-    display: none;
-}
+// #header-logotype-container {
+    // grid-row: 1 / 2;
+    // margin: 20px 0;
+// }
+// #logotype {
+//     grid-row: 1/2;
+//     height: 50px;
+//     margin:auto;
+// }
+// #title {
+//     grid-row: 2/3;
+//     margin: auto;
+//     // color: @WEB_FG_COLOR;
+//     font-size: 25px !important;
+//     letter-spacing: 1px;
+// }
+// #mobile-nav-icon-container{
+//     display: none;
+// }
