--- a/resources/less/components/navigation.less
+++ b/resources/less/components/navigation.less
@@ -1,5 +1,12 @@
-
 /* ===== N A V I G A T I O N ===== */
+.mobile-nav-button{
+    .fixed-widh-height(50px,50px);
+    .circle-border(2px, solid);
+    .no-margin-padding;
+    .flex-center-content{
+    transform: rotateZ(90deg);
+    font-weight: bold;
+}
 #header-navigation-container{
     grid-row: 2 / 7;
     padding: 20px 10px;
