--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -5,13 +5,11 @@
 @import './layouts/footer.less';
 @import './layouts/sidebar.less';
 
-// @import './utilities/all.css';
-
 // @import './utilities/animations.less';
-@import './common/mixins.less';
-@import './common/media-queries.less';
-@import './common/variables.less';
-// @import './common/generics.less';
+@import './utilities/mixins.less';
+// @import './utilities/media-queries.less';
+@import './utilities/variables.less';
+@import './common/class-components.less';
 
 @import './components/logotype.less';
 @import './components/navigation.less';
@@ -25,17 +23,3 @@
 // @import './components/notification.less';
 // @import './components/admin.less';
 
-.tag {
-    display: inline-block;
-    padding: 5px;
-    margin: 0 5px;
-    border-radius: 10px;
-    font-size: 12px;
-    text-decoration: none;
-}
-.rate-container {
-    margin: 0;
-}
-.rate {
-    color: #fd4;
-}
