--- a/resources/less/layouts/header.less
+++ b/resources/less/layouts/header.less
@@ -1,9 +1,17 @@
 /* ===== H E A D E R ===== */
-.header-container{
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+.transparent-header-container{
     display:grid;
-    grid-template: minmax(auto,100px) auto / auto;
-    grid-auto-rows: 50px;
+    grid-template: auto / 1fr auto;
+    padding: 10px;
+}
+.header-container{
+    // display: flex;
+    // display:grid;
+    // grid-template: auto / auto 1fr auto;
+    // grid-column: 1 / 2;
+    // grid-row: 1 / 2;
+    // display:grid;
+    // grid-template: minmax(auto,100px) auto / auto;
+    // grid-auto-rows: 50px;
     .panel-primary;
 }
