--- a/resources/less/layouts/main.less
+++ b/resources/less/layouts/main.less
@@ -2,11 +2,11 @@
 /*          M A I N          */
 /* v v v v v v v v v v v v v */
 #main-section-container {
-    grid-column: 2 / 3;
-    grid-row: 1 / 3;
-    display:grid;
-    grid-template: 50px auto / repeat(8, 1fr);
-    overflow-y: hidden;
+    // grid-column: 2 / 3;
+    // grid-row: 1 / 3;
+    // display:grid;
+    // grid-template: 50px auto / repeat(8, 1fr);
+    // overflow-y: hidden;
 
 }
 #main-content-container {
