--- a/resources/less/layouts/public.less
+++ b/resources/less/layouts/public.less
@@ -1,5 +1,11 @@
 .public-layout {
-    display: grid;
-    grid-template:  1fr auto / minmax(auto,210px) auto minmax(auto,250px) ;
+    // display: grid;
+    // grid-template:  auto / auto;
     height: inherit;
 }
+
+// .public-layout {
+//     display: grid;
+//     grid-template:  1fr auto / minmax(auto,210px) auto minmax(auto,250px) ;
+//     height: inherit;
+// }
