--- a/resources/less/components/home.less
+++ b/resources/less/components/home.less
@@ -1,54 +1,54 @@
-#home-welcome-image {
-    height: 100vh;
-    object-fit: contain;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-position: top;
-    // background-color: @WEB_NAV_BG_COLOR;
-    background-image: @home_bg_img;
-}
-#home-welcome-overlay {
-    // background-color: fade(@WEB_NAV_BG_COLOR,50%);
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#home-welcome-card{
-    padding:40px;
-    border-radius: 25px;
-    // background-color: fade(@WEB_NAV_BG_COLOR,50%);
-    display: grid;
-    grid-template: auto /auto;
-    // color: @WEB_NAV_FONT_COLOR;
-    width: 50%;
-    text-align: center;
+// #home-welcome-image {
+//     height: 100vh;
+//     object-fit: contain;
+//     background-size: 100% 100%;
+//     background-repeat: no-repeat;
+//     background-position: top;
+//     // background-color: @WEB_NAV_BG_COLOR;
+//     background-image: @home_bg_img;
+// }
+// #home-welcome-overlay {
+//     // background-color: fade(@WEB_NAV_BG_COLOR,50%);
+//     height: 100vh;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
+// #home-welcome-card{
+//     padding:40px;
+//     border-radius: 25px;
+//     // background-color: fade(@WEB_NAV_BG_COLOR,50%);
+//     display: grid;
+//     grid-template: auto /auto;
+//     // color: @WEB_NAV_FONT_COLOR;
+//     width: 50%;
+//     text-align: center;
 
-    opacity: 0;
-    transition-property: all;
-    transition-duration: 3s;
-    transition-delay: 1s;
-    transition-timing-function: ease;
-    animation-name: showmodal;
-    animation-duration: 2s;
-    animation-timing-function: ease;
-    animation-delay: 1s;
-    animation-iteration-count: 1;
-    animation-direction: normal;
-    animation-fill-mode: forwards;
-    animation-play-state: running;
+//     opacity: 0;
+//     transition-property: all;
+//     transition-duration: 3s;
+//     transition-delay: 1s;
+//     transition-timing-function: ease;
+//     animation-name: showmodal;
+//     animation-duration: 2s;
+//     animation-timing-function: ease;
+//     animation-delay: 1s;
+//     animation-iteration-count: 1;
+//     animation-direction: normal;
+//     animation-fill-mode: forwards;
+//     animation-play-state: running;
 
 
-    h2{
-        display: block;
-        font-size: 40px;
-        border-bottom: 2px solid;
-        letter-spacing: 2px;
-        margin: 0 0 0 10px;
-    }
-    p{
-        display: block;
-        font-size: 30px;
-        text-align: justify;
-    }
-}
+//     h2{
+//         display: block;
+//         font-size: 40px;
+//         border-bottom: 2px solid;
+//         letter-spacing: 2px;
+//         margin: 0 0 0 10px;
+//     }
+//     p{
+//         display: block;
+//         font-size: 30px;
+//         text-align: justify;
+//     }
+// }
