--- a/resources/less/layouts/body.less
+++ b/resources/less/layouts/body.less
@@ -6,30 +6,29 @@ body {
     width: 100vw;
     min-width: 320px;
     font-size: @base_font_size;
-    font-family: @web_font_family;
-
-
-    h1{
-        font-size: @parent_heading_size;
-    }
-    h2{
-        font-size: @heading_size;
-    }
-    h3{
-        font-size: @sub_heading_size;
-    }
-    h4{
-        font-size: @annotation_size
-    }
-    h5{
-        font-size: @sub_annotation_size;
-    }
-    h6{
-        font-size: @child_annotation_size
-    }
+    font-family: @base_font_family;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ul, li{
     margin: 0;
     padding: 0;
+}
+
+h1{
+    font-size: @parent_heading_size;
+}
+h2{
+    font-size: @heading_size;
+}
+h3{
+    font-size: @sub_heading_size;
+}
+h4{
+    font-size: @annotation_size
+}
+h5{
+    font-size: @sub_annotation_size;
+}
+h6{
+    font-size: @child_annotation_size
 }
