--- a/resources/less/layouts/footer.less
+++ b/resources/less/layouts/footer.less
@@ -4,9 +4,7 @@
 #footer-section-container {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    // background-color: @WEB_NAV_BG_COLOR;
-    // color:@WEB_FG_COLOR;
-    // box-shadow: 0px -10px 10px 0px;
+    .panel-primary;
 }
 #social-media-links-container{
     padding: 10px;
@@ -20,7 +18,6 @@
 #social-media-links{
     display:grid;
     grid-template: auto / auto;
-    font-size: 15px;
 }
 .social-media-link{
     text-decoration: none;
@@ -31,7 +28,6 @@
 }
 .copyrights {
     display: block;
-    font-size: 12px;
     margin: 10px;
     padding: 10px;
     font-weight: 200;
