--- a/resources/less/utilities/media-queries.less
+++ b/resources/less/utilities/media-queries.less
@@ -12,10 +12,10 @@
             width: 90%;
         }
         h2{
-            font-size: 25px;
+            // font-size: 25px;
         }
         p{
-            font-size: 20px;;
+            // font-size: 20px;;
         }
     }
 /* # # # # # # # */
