--- a/resources/less/utilities/mixins.less
+++ b/resources/less/utilities/mixins.less
@@ -1,9 +1,15 @@
 .panel-primary{
     background-color: @primary ;
-
+    font-family: @panel_font_family;
+    color: @fourth;
 }
 .panel-secondary{
     background-color: @complementary_two;
+}
+.flex-center-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hidden {
     display: none;
@@ -16,6 +22,16 @@
 .element-size(@width, @height) {
     width: @width;
     height: @height;
+}
+.fixed-widh-height(@width, @height){
+    width: @width !important;
+    max-width: @width !important;
+    height: @height !important;
+    max-height: @height !important;
+}
+.no-margin-padding{
+    margin: 0px;
+    padding: 0px;
 }
 
 .image-setting(@width: 250px, @height: 250px, @fit : cover) {
