--- a/resources/less/components/logotype.less
+++ b/resources/less/components/logotype.less
@@ -1,25 +1,7 @@
 /* ===== L O G O ===== */
 .logotype-container{
-    display: flex;
+    display:grid;
+    grid-template: auto / auto 1fr;
+    grid-column-gap: 10px;
     align-items: center;
-    justify-content: space-evenly;
 }
-// #header-logotype-container {
-    // grid-row: 1 / 2;
-    // margin: 20px 0;
-// }
-// #logotype {
-//     grid-row: 1/2;
-//     height: 50px;
-//     margin:auto;
-// }
-// #title {
-//     grid-row: 2/3;
-//     margin: auto;
-//     // color: @WEB_FG_COLOR;
-//     font-size: 25px !important;
-//     letter-spacing: 1px;
-// }
-// #mobile-nav-icon-container{
-//     display: none;
-// }
