--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -1,20 +1,19 @@
 @import './layouts/body.less';
-@import './layouts/public.less';
-@import './layouts/header.less';
-@import './layouts/main.less';
-@import './layouts/footer.less';
-@import './layouts/sidebar.less';
+@import './layouts/user.less';
 
-// @import './utilities/animations.less';
 @import './utilities/mixins.less';
-// @import './utilities/media-queries.less';
 @import './utilities/variables.less';
-@import './common/class-components.less';
+// @import './utilities/animations.less';
+// @import './utilities/media-queries.less';
 
 @import './components/logotype.less';
 @import './components/navigation.less';
 @import './components/home.less';
+@import './components/main.less';
+@import './components/breadcrumbs.less';
 @import './components/publication.less';
+@import './components/socialmedia.less';
+@import './components/copyright.less';
 // @import './components/post.less';
 // @import './components/portfolio.less';
 // @import './components/rating.less';
@@ -23,3 +22,4 @@
 // @import './components/notification.less';
 // @import './components/admin.less';
 
+@import './common/class-components.less';
