--- a/resources/less/utilities/variables.less
+++ b/resources/less/utilities/variables.less
@@ -30,21 +30,18 @@
 @secondary: #13339B;
 @tertiary: #007AD6;
 @fourth: #74C7FF;
-
 @complementary_one: #1C4F84;
 @complementary_two: #192A3B;
 @complementary_three: #000324;
-
+@complementary_four: #0b1019;
 @warning: #FFCF4B;
 @danger: #df4040;
 @inactive: #C2C2C2;
 
-
-
-
 // Assets Variables
 @home_bg_img : url('../../assets/images/bg-home.png');
-@images : "../assets/images/";
-@icons : "../assets/icons/";
-@webfonts : "../assets/webfonts/";
+
+@images : "../assets/images";
+@icons : "../assets/icons";
+@webfonts : "../assets/webfonts";
 
