--- a/resources/less/components/home.less
+++ b/resources/less/components/home.less
@@ -1,3 +1,13 @@
+/* ===== H O M E ===== */
+.home-container{
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    background: @home_bg_img no-repeat center 50%;
+    padding:10%;
+}
+
+
 // #home-welcome-image {
 //     height: 100vh;
 //     object-fit: contain;
