--- a/resources/less/components/breadcrumbs.less
+++ b/resources/less/components/breadcrumbs.less
@@ -9,12 +9,22 @@
     div{
         .flex-center-content;
         justify-content: initial;
+
         .breadcrumbs-arrow {
             .fixed-widh-height(25px,25px);
             .flex-center-content;
-            .circle-border(2px, solid);
+            .round-border(2px, solid, 10px);
+            .box-container-mixin(10%, 0px, @complementary_two);
+            padding: 0 5px;
             font-size: 20px;
             margin: 10px;
+
+            &:hover{
+                background-color: fade(@fourth, 20%);
+            }
+            &:active{
+                background-color: fade(@fourth, 40%);
+            }
         }
     }
 }
