--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -1,12 +1,16 @@
-
 /* ===== M A I N ===== */
-#main-section-container {
+.main-container {
+    // background: radial-gradient(circle at center, @fourth 50%, @complementary_one 100%);
+    background: linear-gradient(@fourth 20%, @secondary);
+    padding:20px;
     // grid-column: 2 / 3;
     // grid-row: 1 / 3;
     // display:grid;
     // grid-template: 50px auto / repeat(8, 1fr);
     // overflow-y: hidden;
 
+}
+.main-box-container{
 }
 #main-content-container {
     padding: 40px;
