--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -1,8 +1,9 @@
 @import './layouts/body.less';
 @import './layouts/user.less';
 
-@import './utilities/mixins.less';
 @import './utilities/variables.less';
+@import './utilities/mixins.less';
+
 // @import './utilities/animations.less';
 // @import './utilities/media-queries.less';
 
@@ -11,11 +12,11 @@
 @import './components/home.less';
 @import './components/main.less';
 @import './components/breadcrumbs.less';
-@import './components/publication.less';
+@import './components/blog.less';
 @import './components/socialmedia.less';
 @import './components/copyright.less';
 // @import './components/post.less';
-// @import './components/portfolio.less';
+@import './components/portfolio.less';
 // @import './components/rating.less';
 // @import './components/about.less';
 // @import './components/form.less';
