--- a/resources/less/layouts/user.less
+++ b/resources/less/layouts/user.less
@@ -20,9 +20,9 @@
     overflow: hidden;
 }
 /* ===== C O N T E N T ===== */
-.content-container{
-    // padding: 20px 0;
-}
+// .content-container{
+//  /* Wraps the section between the header & aside */
+// }
 /* ===== A S I D E ===== */
 .aside-container{
     padding: 20px;
