--- a/resources/less/utilities/variables.less
+++ b/resources/less/utilities/variables.less
@@ -7,7 +7,7 @@
 //DockGothic16 - Like Oldschool Computer OR Gameboy
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 
-//Zilla Zilat - Black bg
+// 'Zilla Slab Highlight' - Black bg
 @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:wght@400;700&display=swap');
 
 //Indie Flower - Like Handwriting
@@ -44,8 +44,8 @@
 @box_button_color_hover: linear-gradient(@tertiary, fade(@fifth, 70%));
 @box_button_color_active: linear-gradient(@fifth, @tertiary);
 
-
 // @main_bg_color : radial-gradient(,@fourth, @complementary_one);
+
 // Assets Variables
 @home_bg_img : url('../../assets/images/bg-home.png');
 
