--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -1,33 +1,17 @@
 /* ===== M A I N ===== */
 .main-container {
-    // background: radial-gradient(circle at center, @fourth 50%, @complementary_one 100%);
+    /* Wraps everything in the content section */
     background: linear-gradient(@fourth 20%, @secondary);
     padding:20px;
-    // grid-column: 2 / 3;
-    // grid-row: 1 / 3;
-    // display:grid;
-    // grid-template: 50px auto / repeat(8, 1fr);
-    // overflow-y: hidden;
-
 }
-.main-box-container{
+.index-container {
+    /* Wraps the each sub-content section */
+    padding:0 !important;
 }
-#main-content-container {
-    padding: 40px;
-    // margin: auto;
-    // max-width: 750px;
-    display: grid;
-    grid-template: auto auto / auto;
-    grid-row-gap: 25px;
-    grid-column: 1 / 6;
-    overflow-y: scroll;
-    scrollbar-track-color: khaki;
-
+.sub-content-container{
+    /* Wraps the articles, posts, lists, projects, etc.*/
+    padding: 5%;
 }
 .section-title {
-    // background:
-    padding: 10px 20px;
-    // color: @WEB_NAV_FONT_COLOR;
-    font-weight: lighter;
-    /* box-shadow: 0px 1px 5px -1px #000a; */
+    padding: 10px 0;
 }
