--- a/resources/less/components/portfolio.less
+++ b/resources/less/components/portfolio.less
@@ -1,45 +1,35 @@
-/* # # # # # # # # # # # # # */
-/*          I N D E X        */
-/* v v v v v v v v v v v v v */
-.project-list{
-    list-style: none;
-    margin: 0px;
-    display: grid;
-    grid-template: auto/auto;
-    grid-row-gap: 30px;
-    grid-row-gap: 30px;
-    min-width: 550px;
-    li{
-        margin: 0px;
-        padding:0px;
-        a{
-            text-decoration: none;
+/* ===== P O R T F O L I O ===== */
+.project-list-container{
+    max-height: 20em;
+
+    ul{
+        display: block !important;
+        overflow-x: hidden !important;
+        max-height: inherit;
+
+        li{
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            margin: 15px 0 !important;
+            padding: 0;
+
+            a{
+                .remove-decoration;
+            }
         }
     }
 }
-.project-img-container {
-    width: 100%;
-    height: 400px;
-}
-.project-img-overlay{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width:100%;
-    background: fade(@WEB_NAV_BG_COLOR, 80%)
-}
-.project-description-container {
+.project-title-container {
     padding: 20px;
     margin:30px;
-    color: @WEB_NAV_FONT_COLOR;
     border: 1px solid;
+    border-radius: 5px;
     text-align: center;
     justify-content: center;
+    font-family: 'Zilla Slab Highlight', sans-serif;
 }
-/* # # # # # # # # # # # # # */
-/*        P R O J E C T      */
-/* v v v v v v v v v v v v v */
+/* ===== P R O J E C T ===== */
 .portfolio-meta{
     margin: 10px;
     padding: 10px ;
