--- a/resources/less/utilities/mixins.less
+++ b/resources/less/utilities/mixins.less
@@ -64,3 +64,7 @@
     justify-content: center;
     align-items: center;
 }
+.remove-decoration{
+    text-decoration: none;
+    color: inherit;
+}
