--- a/resources/less/components/breadcrumbs.less
+++ b/resources/less/components/breadcrumbs.less
@@ -1,11 +1,14 @@
 /* ===== B R E A D C R U M B S ===== */
 .breadcrumbs-container{
+
+    .panel-secondary;
     width: 100%;
     position: sticky;
+    z-index: 2;
     top: 75px;
-    .panel-secondary;
     align-items: center;
     font-weight: bold;
+
     div{
         .flex-center-content;
         justify-content: initial;
