[DEF] Modal Component | Contact Form layout

--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -6,6 +6,7 @@
 }
 .index-container {
     /* Wraps the each sub-content section */
+    position:relative;
     padding:0 !important;
 }
 .sub-content-container{
