--- a/resources/less/utilities/mixins.less
+++ b/resources/less/utilities/mixins.less
@@ -68,3 +68,9 @@
     text-decoration: none;
     color: inherit;
 }
+.reset-input{
+    display: block;
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
