--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -4,7 +4,7 @@
 @import './utilities/variables.less';
 @import './utilities/mixins.less';
 
-// @import './utilities/animations.less';
+@import './utilities/animations.less';
 // @import './utilities/media-queries.less';
 
 @import './components/logotype.less';
@@ -19,7 +19,7 @@
 @import './components/portfolio.less';
 // @import './components/rating.less';
 // @import './components/about.less';
-// @import './components/form.less';
+@import './components/contact.less';
 // @import './components/notification.less';
 // @import './components/admin.less';
 
