--- a/resources/less/components/copyright.less
+++ b/resources/less/components/copyright.less
@@ -1,6 +1,6 @@
 .copyrights {
     font-size: @child_annotation_size;
-    color: @inactive;
+    color: @mid_neutral;
     background-color: @complementary_four;
     padding: 10px;
 }
