--- a/resources/less/components/main.less
+++ b/resources/less/components/main.less
@@ -2,12 +2,13 @@
 .main-container {
     /* Wraps everything in the content section */
     background: linear-gradient(@fourth 20%, @secondary);
-    padding:20px;
+    padding:10px;
 }
 .index-container {
     /* Wraps the each sub-content section */
     position:relative;
     padding:0 !important;
+    overflow: initial !important;
 }
 .sub-content-container{
     /* Wraps the articles, posts, lists, projects, etc.*/
