--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -17,10 +17,11 @@
 @import './components/copyright.less';
 // @import './components/post.less';
 @import './components/portfolio.less';
-// @import './components/rating.less';
+@import './components/rating.less';
 // @import './components/about.less';
 @import './components/contact.less';
 // @import './components/notification.less';
 // @import './components/admin.less';
+@import './components/modal.less';
 
 @import './common/class-components.less';
