--- a/resources/less/utilities/animations.less
+++ b/resources/less/utilities/animations.less
@@ -8,6 +8,20 @@
         top: 30%;
     }
     100%{
-        top: 20%;
+        top: 15%;
+    }
+}
+@keyframes modalSlideToTop {
+    0% {
+        top: 15%
+    }
+    50%{
+        top: 15%;
+    }
+    80%{
+        top:30%;
+    }
+    100%{
+        top: -100%
     }
 }
