--- a/resources/less/utilities/mixins.less
+++ b/resources/less/utilities/mixins.less
@@ -68,7 +68,13 @@
     text-decoration: none;
     color: inherit;
 }
-.reset-input{
+.button-setup {
+    padding: 10px;
+    border-radius: 2px;
+    font-weight: bold;
+    text-align: center;
+}
+.input-reset{
     display: block;
     border: 0;
     padding: 0;
