--- a/resources/less/utilities/variables.less
+++ b/resources/less/utilities/variables.less
@@ -38,12 +38,17 @@
 
 @warning: #FFCF4B;
 @danger: #df4040;
-@inactive: #C2C2C2;
+@light_neutral: #fdfdfd;
+@mid_neutral: #C2C2C2;
+@dark_neutral: #6b6b6b;
 
-@box_button_color: linear-gradient(@tertiary, @fifth);
-@box_button_color_hover: linear-gradient(@tertiary, fade(@fifth, 70%));
-@box_button_color_active: linear-gradient(@fifth, @tertiary);
+@dark_box_button_color: linear-gradient(@tertiary, @fifth);
+@dark_box_button_color_hover: linear-gradient(@tertiary, fade(@fifth, 70%));
+@dark_box_button_color_active: linear-gradient(@fifth, @tertiary);
 
+@light_box_button_color: linear-gradient(@fourth, @tertiary);
+@light_box_button_color_hover: linear-gradient(@fourth, fade(@tertiary, 70%));
+@light_box_button_color_active: linear-gradient(@tertiary, @fourth);
 // @main_bg_color : radial-gradient(,@fourth, @complementary_one);
 
 // Assets Variables
