--- a/resources/less/components/blog.less
+++ b/resources/less/components/blog.less
@@ -3,27 +3,16 @@
     background: radial-gradient(ellipse at center, rgba(50, 130, 183, 0.45) 50%, #00000029 100%) !important;
     padding: 0 !important;
 }
+
 /* ===== P O S T ===== */
-.post-title {
-    // font-size: @title-font-size;
-    font-weight: bold;
-    // color: @complement-color;
-}
-.post-meta{
-    display: grid;
-    grid-template: 'author a a a a rate'
-                   'date   a a a a tags';
-    margin: 10px 0;
-}
-.post-author {
-    grid-area: author;
-}
-.post-date {
-    grid-area:date;
-}
-.post-rate{
-    grid-area: rate;
-}
-.post-tags-container{
-    grid-area: tags;
+.post-container{
+    padding: 5px !important;
+
+    article{
+        max-height: 80vh;
+        overflow-y: scroll;
+        padding: 5px 10px;
+        background: @light_neutral !important;
+        border-radius: 3px;
+    }
 }
