--- a/resources/less/components/rating.less
+++ b/resources/less/components/rating.less
@@ -1,19 +1,27 @@
-/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-================================== R A T I N G ==================================
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+/* ===== R A T I N G ===== */
 
+.rate-container {
+    margin: 0;
+}
+
+.rate {
+    color: @fourth;
+    // color: #fd4;
+}
 .rating-container {
-   display:flex;
-   align-items: center;
+    display:flex;
+    align-items: center;
+    padding:5px !important;
+    margin: 5px 0 !important;
 }
 .rating-title{
-    margin: 10px;
+    padding: 10px;
 }
 
 .star-widget {
     display: flex;
     flex-direction: row-reverse;
-    margin: 10px;
+    padding: 10px;
 }
 
 .star-widget>input {
@@ -22,15 +30,18 @@
 
 .star-widget>label {
     font-size: 20px;
-    color: #444;
+    color: @complementary_two;
+    -webkit-text-stroke: 1px @complementary_one;
     transition: all 0.2s ease;
 }
 
 .star-widget>input:not(:checked)~label:hover,
 .star-widget>input:not(:checked)~label:hover~label {
-    color: #fd4;
+    color:@fourth;
+    // color: #fd4;
 }
 
 .star-widget>input:checked~label {
-    color: #fd4;
+    color: @fourth;
+    // color: #fd4;
 }
