--- a/resources/less/components/breadcrumbs.less
+++ b/resources/less/components/breadcrumbs.less
@@ -30,3 +30,9 @@
         }
     }
 }
+@media screen and (min-width: 860px){
+    .breadcrumbs-container{
+        position: initial;
+        grid-row: 1 / 2;
+    }
+}
