--- a/resources/less/components/copyright.less
+++ b/resources/less/components/copyright.less
@@ -1,4 +1,5 @@
 .copyrights {
+    display: flex;
     font-size: @child_annotation_size;
     color: @mid_neutral;
     background-color: @complementary_four;
