--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -12,6 +12,9 @@
 @import './components/main.less';
 @import './components/breadcrumbs.less';
 @import './components/blog.less';
+@import './components/portfolio.less';
+@import './components/about.less';
+@import './components/ads.less';
 @import './components/socialmedia.less';
 @import './components/copyright.less';
 @import './components/rating.less';
