--- a/resources/less/layouts/body.less
+++ b/resources/less/layouts/body.less
@@ -5,6 +5,7 @@ body {
     height: 100vh;
     width: 100vw;
     min-width: 320px;
+    color: @base_font_color;
     font-size: @base_font_size;
     font-family: @base_font_family;
 }
