--- a/resources/less/utilities/variables.less
+++ b/resources/less/utilities/variables.less
@@ -17,9 +17,10 @@
 @panel_font_family: 'Prompt';
 @note_font_family: 'Indie Flower';
 
+@base_font_color: @complementary_four;
 @base_font_size: 15px;
-@parent_heading_size : 28px;
-@heading_size : 24px;
+@parent_heading_size : 25px;
+@heading_size : 20px;
 @sub_heading_size : 18px;
 @annotation_size : 15px;
 @sub_annotation_size : 12px;
