--- a/resources/less/components/logotype.less
+++ b/resources/less/components/logotype.less
@@ -5,3 +5,14 @@
     grid-column-gap: 10px;
     align-items: center;
 }
+@media screen and (min-width: 860px){
+    .logotype-container{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+
+        // h1{
+        //     font-size: 1.4em;
+        // }
+    }
+}
