--- a/resources/less/components/socialmedia.less
+++ b/resources/less/components/socialmedia.less
@@ -23,3 +23,23 @@
         }
     }
 }
+@media screen and (min-width: 860px){
+    .socialmedia-container{
+        padding: initial;
+        display: flex;
+
+        & > div{
+            border-bottom:none;
+        }
+
+        & > .socialmedia-links-container{
+            grid-template: auto / auto;
+            grid-auto-flow: column;
+            padding: 5px;
+
+            & > a{
+                padding: 5px;
+            }
+        }
+    }
+}
