--- a/resources/less/layouts/user.less
+++ b/resources/less/layouts/user.less
@@ -25,11 +25,87 @@
 // }
 /* ===== A S I D E ===== */
 .aside-container{
-    padding: 20px;
     text-align: center;
     .panel-primary;
 }
 /* ===== F O O T E R ===== */
 .footer-container {
     .panel-tertiary;
+}
+@media screen and (min-width: 860px){
+    .user-layout {
+        overflow: hidden;
+        display:grid;
+        grid-template: repeat(5, 1fr) auto / auto repeat(5, 1fr)
+    }
+    .header-container{
+        grid-row: 1/ 5;
+        grid-column: 1/ 2;
+        max-height: initial;
+        max-width: 250px;
+    }
+    .transparent-header-container{
+        display: block;
+    }
+    .content-container{
+        grid-row: 1 / 6;
+        grid-column: 2 / 7;
+
+        display: grid;
+        grid-auto-flow: column;
+
+        grid-template: auto repeat(5, 1fr) / 1fr;
+        overflow: hidden;
+    }
+    .aside-container{
+        grid-row: 5 / 7;
+        grid-column: 1 / 2;
+        max-width: 250px;
+    }
+    .footer-container{
+        grid-row: 6 / 7;
+        grid-column: 2 / 7;
+        min-height: initial;
+        justify-content: space-between;
+        background-color: @complementary_four;
+    }
+}
+@media screen and (min-width: 1024px){
+    .user-layout {
+        overflow: hidden;
+        display:grid;
+        grid-template: repeat(5, 1fr) auto / auto repeat(5, 1fr)
+    }
+    .header-container{
+        grid-row: 1/ 5;
+        grid-column: 1/ 2;
+        max-height: initial;
+        max-width: 250px;
+    }
+    .transparent-header-container{
+        display: block;
+    }
+    .content-container{
+        grid-row: 1 / 6;
+        grid-column: 2 / 7;
+
+        display: grid;
+        grid-auto-flow: column;
+
+        grid-template: auto repeat(5, 1fr) / 1fr;
+        overflow: hidden;
+    }
+    .aside-container{
+        grid-row: 5 / 7;
+        grid-column: 1 / 2;
+        max-width: 250px;
+    }
+    .footer-container{
+        grid-row: 6 / 7;
+        grid-column: 2 / 7;
+        min-height: initial;
+        display: flex;
+        justify-content: space-between;
+        background-color: @complementary_four;
+    }
 }
